<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/fragment_watchlist_watched_dialog_review_et"
            android:layout_width="400dp"
            android:layout_height="140dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:hint="@string/dialog_review_hint"
            android:inputType="text"
            android:singleLine="false"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_watchlist_watched_dialog_cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:maxLength="250"/>

        <RatingBar
            android:id="@+id/fragment_watchlist_watched_dialog_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:theme="@style/RatingBar"
            app:layout_constraintBottom_toTopOf="@+id/fragment_watchlist_watched_dialog_review_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/fragment_watchlist_watched_dialog_poster_iv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fragment_watchlist_watched_dialog_ratingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/cover_placeholder" />

        <Button
            android:id="@+id/fragment_watchlist_watched_dialog_doneButton"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:text="@string/dialog_review_done"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/fragment_watchlist_watched_dialog_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fragment_watchlist_watched_dialog_doneButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>