<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        tools:context=".view.FilmDetailDialogFragment">

        <ProgressBar
            android:id="@+id/film_details_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/film_details_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">


            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_browse_title_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/fragment_film_details_tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="start"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/fragment_film_details_back_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="The Princess Bride" />

                    <Button
                        android:id="@+id/fragment_film_details_back_button"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableEnd="@drawable/ic_arrow_back_white_24dp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/fragment_film_details_tv_title"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/fragment_film_details_tv_DIRECTEDBY"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/DIRECTED_BY"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/fragment_browse_title_card_view"
                app:layout_constraintTop_toBottomOf="@+id/fragment_browse_title_card_view"
                tools:text="DIRECTED BY" />

            <TextView
                android:id="@+id/fragment_film_details_tv_director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBaseline_toBaselineOf="@+id/fragment_film_details_tv_DIRECTEDBY"
                app:layout_constraintStart_toEndOf="@+id/fragment_film_details_tv_DIRECTEDBY"
                tools:text="Rob Reiner" />

            <TextView
                android:id="@+id/fragment_film_details_tv_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_film_details_tv_DIRECTEDBY"
                tools:text="1987 " />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/interpunct_unicode"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/fragment_film_details_tv_year"
                app:layout_constraintStart_toEndOf="@+id/fragment_film_details_tv_year"
                tools:text="@string/interpunct_unicode" />

            <TextView
                android:id="@+id/fragment_film_details_tv_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                tools:text="99 mins" />

            <ImageView
                android:id="@+id/fragment_film_details_iv_poster"
                android:layout_width="200dp"
                android:layout_height="320dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/film_poster"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_film_details_tv_year"
                app:srcCompat="@drawable/ic_image_loading_grey_48dp"
                tools:srcCompat="@drawable/poster_placeholder" />

            <TextView
                android:id="@+id/fragment_film_details_tv_plot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_film_details_iv_poster"
                tools:text="While home sick in bed, a young boy's grandfather reads him the story of a farmboy-turned-pirate who encounters numerous obstacles, enemies and allies in his quest to be reunited with his true love. " />

            <TextView
                android:id="@+id/fragment_film_details_tv_awards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/fragment_film_details_tv_plot"
                app:layout_constraintTop_toBottomOf="@+id/fragment_film_details_tv_plot"
                tools:text="7 wins and 9 nominations" />

            <TextView
                android:id="@+id/fragment_film_details_tv_STARRING"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/STARRING"
                app:layout_constraintStart_toStartOf="@+id/fragment_film_details_tv_plot"
                app:layout_constraintTop_toBottomOf="@+id/fragment_film_details_tv_awards"
                tools:text="STARRING" />

            <TextView
                android:id="@+id/fragment_film_details_tv_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragment_film_details_tv_STARRING"
                app:layout_constraintTop_toTopOf="@+id/fragment_film_details_tv_STARRING"
                tools:text="Cary Elwes, Robin Wright, Mandy Patinkin, Andre the Giant" />

            <TextView
                android:id="@+id/fragment_film_details_tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/fragment_film_details_tv_STARRING"
                app:layout_constraintTop_toBottomOf="@+id/fragment_film_details_tv_cast"
                tools:text="Adventure, Fantasy, Comedy, Family" />

            <TextView
                android:id="@+id/fragment_film_details_tv_IMDB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/IMDB"
                app:layout_constraintStart_toStartOf="@+id/fragment_film_details_tv_genre"
                app:layout_constraintTop_toBottomOf="@+id/fragment_film_details_tv_genre"
                tools:text="IMDB" />

            <TextView
                android:id="@+id/fragment_film_details_tv_imdbScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBaseline_toBaselineOf="@+id/fragment_film_details_tv_IMDB"
                app:layout_constraintStart_toEndOf="@+id/fragment_film_details_tv_IMDB"
                tools:text="8.1" />

            <TextView
                android:id="@+id/fragment_film_details_tv_METACRITIC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/METACRITIC"
                app:layout_constraintBaseline_toBaselineOf="@+id/fragment_film_details_tv_imdbScore"
                app:layout_constraintStart_toEndOf="@+id/fragment_film_details_tv_imdbScore"
                tools:text="METACRITIC" />

            <TextView
                android:id="@+id/fragment_film_details_tv_metacriticScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBaseline_toBaselineOf="@+id/fragment_film_details_tv_METACRITIC"
                app:layout_constraintStart_toEndOf="@+id/fragment_film_details_tv_METACRITIC"
                tools:text="77" />

            <TextView
                android:id="@+id/fragment_film_details_tv_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fragment_film_details_tv_plot"
                app:layout_constraintStart_toStartOf="@+id/fragment_film_details_tv_IMDB"
                app:layout_constraintTop_toBottomOf="@+id/fragment_film_details_tv_IMDB"
                tools:text="English, Japanese, Arabic, Czech, Russian, British English, Mandarin, Korean" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>